--- a/index.html
+++ b/index.html
@@ -242,5 +242,79 @@
         </div>
     </div>
 </section>
+<section class="skills">
+    <div class="container">
+        <div class="testimonial">
+            <div class="small-heading">
+                <h2>testimonials</h2>
+                <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+            </div>
+            <div class="content">
+                <div class="testi">
+                    <img src="images/skills-01.jpg" alt="">
+                    <div class="text">
+                        <p>
+                            Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.
+                        </p>
+                        <span>John Doe, CEO</span>
+                    </div>
+                </div>
+                <div class="testi">
+                    <img src="images/skills-02.jpg" alt="">
+                    <div class="text">
+                        <p>
+                            Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.
+                        </p>
+                        <span>John Doe, CEO</span>
+                    </div>
+                </div>
+                <ul>
+                    <li></li>
+                    <li class="active"></li>
+                    <li></li>
+                </ul>
+            </div>
+        </div>
+        <div class="kolo">
+            <div class="small-heading">
+                <h2>Skills</h2>
+                <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+            </div>
+            <div class="prog-holder">
+                <h4>Adobe</h4>
+                <div class="prog">
+                    <span style="width: 90%" data-progress="90%"></span>
+                </div>
+            </div>
+            <div class="prog-holder">
+                <h4>Html &amp; Css</h4>
+                <div class="prog">
+                    <span style="width: 85%" data-progress="85%"></span>
+                </div>
+            </div>
+            <div class="prog-holder">
+                <h4>JavaScript</h4>
+                <div class="prog">
+                    <span style="width: 80%" data-progress="80%"></span>
+                </div>
+            </div>
+            <div class="prog-holder">
+                <h4>Php</h4>
+                <div class="prog">
+                    <span style="width: 90%" data-progress="90%"></span>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!--start quote-->
+<section class="quote">
+    <div class="container">
+        <div class="overlay"></div>
+        <q>accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</q>
+        <span>John Doe</span>
+    </div>
+</section>
+
 </body>
 </html>
