--- a/index.html
+++ b/index.html
@@ -315,6 +315,74 @@
         <span>John Doe</span>
     </div>
 </section>
+<section class="pricing">
+    <div class="container">
+        <div class="special-heading">
+            <h2>Pricing</h2>
+            <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.
+            </p>
+        </div>
+        <div class="price-list">
+            <div class="plan">
+                <div class="price">
+                    <h2>BASIC</h2>
+                    <p>19</p>
+                </div>
+                <ul class="features">
+                    <li>Feature No 1</li>
+                    <li>Extra Feature</li>
+                    <li>Extra Feature No 2</li>
+                    <li>Feature</li>
+                </ul>
+                <p>Buy Now</p>
+            </div>
+           <div class="plan">
+                <div class="price">
+                    <h2>PREMIUM</h2>
+                    <p>29</p>
+                </div>
+                <ul class="features">
+                    <li>Feature No 1</li>
+                    <li>Extra Feature</li>
+                    <li>Extra Feature No 2</li>
+                    <li>Feature</li>
+                </ul>
+                <p>Buy Now</p>
+            </div>
+           <div class="plan">
+                <div class="price">
+                    <h2>PRO</h2>
+                    <p>39</p>
+                </div>
+                <ul class="features">
+                    <li>Feature No 1</li>
+                    <li>Extra Feature</li>
+                    <li>Extra Feature No 2</li>
+                    <li>Feature</li>
+                </ul>
+                <p>Buy Now</p>
+            </div>
+           <div class="plan">
+                <div class="price">
+                    <h2>PLATINUM</h2>
+                    <p>49</p>
+                </div>
+                <ul class="features">
+                    <li>Feature No 1</li>
+                    <li>Extra Feature</li>
+                    <li>Extra Feature No 2</li>
+                    <li>Feature</li>
+                </ul>
+                <p>Buy Now</p>
+            </div>
 
+        </div>
+        <div class="contact">
+            <p>Contact us if you have special request</p>
+            <span>Contact Us</span>
+        </div>
+    </div>
+
+</section>
 </body>
 </html>
