--- a/index.html
+++ b/index.html
@@ -384,5 +384,65 @@
     </div>
 
 </section>
+<section class="email-submit">
+
+    <div class="container">
+        <div class="overlay"></div>
+        <form action="#">
+            <input type="email" name="your-email" id="" placeholder="Your Email">
+            <input type="submit" value="SUBSCRIBE">
+        </form>
+        <p>
+            Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blan dit aliquet elit, eget tincidunt.
+        </p>
+
+    </div>
+</section>
+<!--start Contact-us-->
+<section class="contact-us">
+
+    <div class="container">
+        <div class="special-heading">
+            <h2>Contact Us</h2>
+            <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+        </div>
+    <div class="form">
+        <form action="#">
+            <input type="text" name="your-name" id="text" placeholder="Your Name">
+            <input type="email" name="email" id="email" placeholder="Your Email">
+            <textarea type="text" name="message" id="message" placeholder="Your Message"></textarea>
+            <input type="submit"class="submit">
+        </form>
+        <div class="in-touch">
+            <h2>GET IN TOUCH</h2>
+            <p> +00 123.456.789<br>
+                +00 123.456.789</p>
+            <h2>WHERE WE ARE</h2>
+            <address>
+                Awesome Address 17<br>
+                New York, NYC<br>
+                123-4567-890<br>
+                USA
+            </address>
+        </div>
+    </div>
+    </div>
+</section>
+<!--end Contact-us-->
+<!--start footer-->
+<div class="footer">
+    <div class="container">
+        <img src="images/logo.png" alt="Logo">
+        <p>We Are Social</p>
+        <div class="social-icons">
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fas fa-home"></i>
+            <i class="fab fa-linkedin"></i>
+        </div>
+        <p class="copyright">© 2021 <span>Kasper</span> All Right Reserved</p>
+    </div>
+</div>
+<!--end footer-->
 </body>
 </html>
